Added simply magic server